--- a/syde552 proj.ipynb
+++ b/syde552 proj.ipynb
@@ -25,11 +25,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b78e096",
+   "id": "a3b866d3",
    "metadata": {},
    "source": [
     "Code adapted from: https://github.com/ranaa-b/OOCS/tree/main\n",
-    "        "
+    "\n",
+    "@InProceedings{pmlr-v139-babaiee21a,\n",
+    "  title = \t {On-Off Center-Surround Receptive Fields for Accurate and Robust Image Classification},\n",
+    "  author =       {Babaiee, Zahra and Hasani, Ramin and Lechner, Mathias and Rus, Daniela and Grosu, Radu},\n",
+    "  booktitle = \t {Proceedings of the 38th International Conference on Machine Learning},\n",
+    "  pages = \t {478--489},\n",
+    "  year = \t {2021},\n",
+    "  editor = \t {Meila, Marina and Zhang, Tong},\n",
+    "  volume = \t {139},\n",
+    "  series = \t {Proceedings of Machine Learning Research},\n",
+    "  month = \t {18--24 Jul},\n",
+    "  publisher =    {PMLR},\n",
+    "  pdf = \t {http://proceedings.mlr.press/v139/babaiee21a/babaiee21a.pdf},\n",
+    "  url = \t {http://proceedings.mlr.press/v139/babaiee21a.html},\n",
+    "}      "
    ]
   },
   {
@@ -2707,7 +2721,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "85369fed",
+   "id": "cfc3b925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2749,7 +2763,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c35133f9",
+   "id": "f5519d94",
    "metadata": {},
    "outputs": [
     {
@@ -2788,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ed918d0d",
+   "id": "55a861b2",
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2836,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8a7cd2a4",
+   "id": "b44bc8c2",
    "metadata": {},
    "outputs": [
     {
@@ -2854,7 +2868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b74061d0",
+   "id": "b346a8e0",
    "metadata": {},
    "outputs": [],
    "source": []
